--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
     "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.2",
     "next": "16.0.6",
     "pg": "^8.16.3",
     "react": "19.2.0",
