--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "better-sqlite3": "^12.5.0",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
