--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
     "@prisma/client": "^7.0.1",
-    "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "next": "^16.0.7",
+    "next-intl": "^4.5.8",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.25",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.6",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
     "prisma": "^7.0.1",
