--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "^7.1.0",
     "bcryptjs": "^3.0.3",
     "better-sqlite3": "^12.5.0",
+    "dotenv": "^17.2.3",
     "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.2",
     "next": "^16.0.7",
@@ -33,7 +34,7 @@
     "@types/react-dom": "^19.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
-    "prisma": "^7.0.1",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
